--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-template-html",
   "version": "0.0.2",
-  "description": "",
+  "description": "Generate static HTML files from templates and content files",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
