--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/grit96/gulp-template-html",
   "dependencies": {
-    "through2": "~2.0.1",
+    "plugin-error": "^1.0.1",
     "template-html": "0.3.1",
-    "gulp-util": "~3.0.7"
+    "through2": "~2.0.1"
   },
   "devDependencies": {
     "gulp": "~3.9.1",
